# vomero

./: .dockerignore  .env.example  .gitignore  README.md  main.py  pyproject.toml  test_loop.py
deploy/: Dockerfile  README.md  app.py  sandbox.Dockerfile  worker.Dockerfile
deploy/k8s/: deployment.yaml  networkpolicy.yaml  runtimeclass.yaml  secret.example.yaml  service.yaml  vomero-endpoint.yaml
deploy/vm/: README.md  vomero.env.example  vomero.service
docs/: deployment.md  serving.md
docs/adr/: 0001-execution-environment.md  0002-model-provider-abstraction.md  0003-context-compaction.md  0004-gvisor-sandbox.md
examples/: browser_client.html
examples/sample_corpus/: employees.md  teams.md
examples/sample_corpus/projects/: P-ATLAS.md  P-BEACON.md
src/vomero/: __init__.py  channel.py  cli.py  config.py  sandbox_runner.py  server.py  usage.py
src/vomero/context/: __init__.py  corpus.py  index.py  retrieval.py  search.py  source.py  variable.py
src/vomero/engine/: __init__.py  compaction.py  rlm.py  todo.py
src/vomero/eval/: __init__.py  datasets.py  harness.py  metrics.py  optimize.py  runners.py
src/vomero/execution/: __init__.py  base.py  inprocess.py  session.py
src/vomero/execution/sandbox/: __init__.py  agent.py  config.py  environment.py  protocol.py
src/vomero/llm/: __init__.py  base.py  embeddings.py  gemini_client.py  openai_client.py
tests/: test_build_client.py  test_context_variable.py  test_corpus.py  test_engine_fake_llm.py  test_eval.py  test_sandbox.py  test_server.py  test_session_pool.py
