[project]
name = "vomero"
version = "0.0.1"
description = "A coding/data assistant built on the Recursive Language Model (RLM) idea: context lives in a REPL variable and is navigated programmatically, not stuffed into the prompt."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "openai>=1.40",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
# Optional: route the model's system-touching ops (shell, code, files) through
# the vomero_sandbox Kubernetes backend. Enabled with VOMERO_SYSTEM_SANDBOX=1.
# A sibling module of the vomero ecosystem, kept independently maintained.
k8s = [
    "vomero-sandbox @ git+https://github.com/AntonioGr7/vomero_sandbox.git",
]

[project.scripts]
vomero = "vomero.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
# The `k8s` extra pulls vomero_sandbox straight from its git repo (a direct
# reference); hatchling requires this opt-in to allow that.
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vomero"]

[tool.pytest.ini_options]
testpaths = ["tests"]
